# angiotk

./: .gitmodules  .travis.yml  CMakeLists.txt  COPYRIGHT.TXT  CTestConfig.cmake  Dockerfile  HEADER.TXT  LICENSE.TXT  README.adoc  README.md  book.json  docker-compose.yml  site.yml
.buildkite/: pipeline.yml
.buildkite/steps/: build.sh  release.sh
CMake/: AngioTkDirective.cmake  AngioTkExternalData.cmake  AngioTkMacros.cmake  AngioTkModules.cmake  AngioTkSuperBuild.cmake  AngioTkSuperBuildInstall.cmake.in  AngioTk_VMTK_pull_317.patch  AngioTk_VMTK_v1.3.2.patch  AngioTk_VMTK_vtkVersionLess8.patch
CMake/KWStyle/: AngioTk.kws.xml.in  AngioTkFiles.txt.in  AngioTkHeader.h  KWStyle.cmake
Data/: CMakeLists.txt  README.md  fetch-data.py
Examples/: CMakeLists.txt  MeshFromCenterlines  MeshFromMRI
Examples/MeshFromMRI/: CMakeLists.txt
Examples/MeshFromMRI/Base2_FOA42/artery/: CMakeLists.txt  remeshstlgmsh.cfg  runpipeline.sh  runpipeline.sh.in  surfacefromimage.cfg  surfacefromimage2.cfg
Examples/MeshFromMRI/Base2_FOA42/artery/data/: pointpair1.data  pointpair4.data
Examples/MeshFromMRI/Base2_GEO26/veinous/: CMakeLists.txt  centerlines.cfg  centerlinesmanager.cfg  imagefromcenterlines.cfg  remeshstlgmsh.cfg  runpipeline.sh  surfacefromimage.cfg  surfacefromimage2.cfg
Examples/MeshFromMRI/Base2_GEO26/veinous/data/: pointpair.data
Examples/Python/: AngioTkSimplePipeline.py.in  CMakeLists.txt
Modules/: CMakeLists.txt
Modules/CFD/: CMakeLists.txt
Modules/CFD/BloodFlowSimulation/: CMakeLists.txt
Modules/CFD/BloodFlowSimulation/src/: CMakeLists.txt  bloodflow.cfg  bloodflow_main.cpp
Modules/CT_Segmentation/CT_Segmentation/: CMakeLists.txt  main.cpp  stloff_main.cpp
Modules/CT_Segmentation/CT_Segmentation/include/: ComponentTree.h  ComponentTree.hxx  Image.h  Point.h  Types.h
Modules/Core/: CMakeLists.txt  README.adoc
Modules/Filtering/ITK/: CMakeLists.txt
Modules/MRI/: CMakeLists.txt  README.adoc
Modules/Meshing/: CMakeLists.txt  simpleTbifurcation.inletoutlet.desc.md5
Modules/Meshing/PostProcessing/: CMakeLists.txt  simpleTbifurcationFSI.msh.md5
Modules/Meshing/PostProcessing/include/: postprocessing.hpp
Modules/Meshing/PostProcessing/src/: CMakeLists.txt  extractsubmesh.cfg  extractsubmesh_main.cpp  extractsubmesh_main.cpp~  meshpartitioner.cfg  meshpartitioner.cpp  postprocessing.cfg  postprocessing.cpp  postprocessing_main.cpp
Modules/Meshing/PostProcessing/test/: CMakeLists.txt  extractsubmesh.cfg  meshpartitioner.cfg  postprocessing.cfg
Modules/Meshing/RemeshBasedOnCenterlines/: CMakeLists.txt  angiotkMeshingConfig.h.in  simpleTbifurcation.stl.md5
Modules/Meshing/RemeshBasedOnCenterlines/include/: toolboxbloodflowmesh.hpp  volumefromstl.hpp
Modules/Meshing/RemeshBasedOnCenterlines/src/: CMakeLists.txt  centerlines.cfg  centerlines_main.cpp  remeshstl.cfg  remeshstl_gmsh.cfg  remeshstl_main.cpp  remeshstlgmsh.cfg  remeshstlvmtk.cfg  volume_main.cpp  volumefromstl.cfg  volumefromstl.cpp  volumefromstl_main.cpp  volumefromstlandcenterlines.cfg  volumefromstlandcenterlines_main.cpp
Modules/Meshing/RemeshBasedOnCenterlines/test/: CMakeLists.txt  bloodflowmeshfromSTL.cfg  bloodflowmeshfromSTL.cpp
Modules/Meshing/VolumeFromSTL/: CMakeLists.txt  angiotkMeshingConfig.h  angiotkMeshingConfig.h.in  simpleTbifurcation.inletoutlet.desc.md5  simpleTbifurcation_remeshVMTKarea0.005.stl.md5  simpleTbifurcation_remeshVMTKarea0.005_centerlines.vtk.md5
Modules/Meshing/VolumeFromSTL/gmshHeadersMissing/: CMakeLists.txt
Modules/Meshing/VolumeFromSTL/include/: AngioTkCenterlineField.h  angiotkPolyBall.h  angiotkPolyBallLine.h  angiotkPolyBallModeller.h  centerlinesmanageriodata.hpp  centerlinesmanagerwindowinteractor.hpp  volumefromstl.hpp
Modules/Meshing/VolumeFromSTL/include/gmshHeadersMissing/: BackgroundMesh.h  MVertexPositionSet.h
Modules/Meshing/VolumeFromSTL/src/: AngioTkCenterlineField.cpp  CMakeLists.txt  angiotkPolyBall.cxx  angiotkPolyBallLine.cxx  angiotkPolyBallModeller.cxx  centerlines.cfg  centerlines_main.cpp  centerlinesmanager_main.cpp  centerlinesmanagergui_main.cpp  centerlinesmanageriodata.cpp  centerlinesmanagerwindowinteractor.cpp  createinletoutletdesc_main.cpp  imagefromcenterlines_main.cpp  imagesmanager_main.cpp  opensurface_main.cpp  remeshstl_main.cpp  remeshstlgmsh.cfg  remeshstlvmtk.cfg  smoothsurface_main.cpp  subdividesurface_main.cpp  surfacefromimage_main.cpp  tubularextension_main.cpp  volumefromstl.cfg  volumefromstl.cpp  volumefromstl_main.cpp  volumefromstlandcenterlines.cfg  volumefromstlandcenterlines_main.cpp
Modules/Meshing/VolumeFromSTL/test/: CMakeLists.txt  centerlines.cfg  remeshstlgmsh.cfg  remeshstlvmtk.cfg  volumefromstl.cfg  volumefromstlandcenterlines.cfg
Modules/ParticleTracer/ParaView/: CMakeLists.txt  README.md
Modules/ParticleTracer/ParaView/include/: H5ParticleReader.hpp
Modules/ParticleTracer/ParaView/src/: CMakeLists.txt  H5ParticleReader.cpp  particletracer_pv.cpp
Modules/ParticleTracer/ParaView/test/: CMakeLists.txt  phantom.csv  test_reader.cpp
Modules/Segmentation/: CMakeLists.txt
Pipeline/: AngioTkInstallPipelineScript.cmake.in  CMakeLists.txt  angiotk_pipeline_run.py.in  createAsciidocDB.py  createAsciidocDB.py.in  createAsciidocSummary.py.in  master.py  master.py.in  results.html  results2.html  resultsDB2.html  resultsDB3.html  runAngioTKPipeline.py.in  screenShot.py  screenshot.py  screenshot.py.in  setupAngioTKEnvironment.sh.in  summary.html  testAngioTKPipeline.py  testAngioTKPipeline.py.in
Pipeline/css/: resultsDB.css
Pipeline/js/: populate_from_json_with_accordion.js  resultsDB_populate_from_json_accordion.js  results_populate_from_json.js  summary_populate_from_json_with_accordion.js
doc/: AngioTK practical work - from MRA to vascular 3D model.adoc
doc/book/: Building.adoc  Examples.adoc  Introduction.adoc  Master_Script.adoc  Meshing Module_Description.adoc  Meshing_Module_Description.adoc  Module_1_RORPO.adoc  Overview.adoc  (+9 more)
docker/: Dockerfile.angiotk  Dockerfile.feelpp-env  Dockerfile.vmtk  WELCOME  feelpp.env.sh
docs/: antora.yml  index.html
(+229 files in other folders)
